@@ -42,6 +42,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #include "libtorrent/string_util.hpp"
 #include "libtorrent/aux_/portmap.hpp"
 #include "libtorrent/aux_/vector.hpp"
+#include "libtorrent/aux_/session_settings.hpp"
 
 #include <memory>
 #include <functional>
@@ -147,14 +148,12 @@ struct TORRENT_EXTRA_EXPORT upnp final
 	, single_threaded
 {
 	upnp(io_service& ios
-		, std::string const& user_agent
+		, aux::session_settings const& settings
 		, aux::portmap_callback& cb
 		, address_v4 const& listen_address
 		, address_v4 const& netmask
 		, std::string listen_device);
 	~upnp();
-
-	void set_user_agent(std::string const& v) { m_user_agent = v; }
 
 	void start();
 
@@ -288,11 +287,8 @@ private:
 		std::string path;
 		address external_ip;
 
-		// there are routers that's don't support timed
-		// port maps, without returning error 725. It seems
-		// safer to always assume that we have to ask for
-		// permanent leases
-		int lease_duration = 0;
+		// default lease duration for a port map.
+		int lease_duration = 3600;
 
 		// true if the device supports specifying a
 		// specific external port, false if it doesn't
@@ -318,7 +314,7 @@ private:
 
 	aux::vector<global_mapping_t, port_mapping_t> m_mappings;
 
-	std::string m_user_agent;
+	aux::session_settings const& m_settings;
 
 	// the set of devices we've found
 	std::set<rootdevice> m_devices;
